Links the A tags to their own URIs.

--- a/index.html
+++ b/index.html
@@ -65,26 +65,28 @@
 
 			<div id="content">
 				<p>
-					Vimiax is a <a href="#">Google Chrome</a> extension which aims to port
-					the <a href="http://vim.org">Vim</a> interface to the browser. It allows
-					to full control the browser (navigation, history, bookmarks, sessions,
-					etc.) using Vim-like key bindings; thus, without using the mouse at all.
+					Vimiax is a <a href="http://www.google.com/chrome">Google Chrome</a>
+					extension which aims to port the <a href="http://vim.org">Vim</a>
+					interface to the browser. It allows to full control the browser
+					(navigation, history, bookmarks, sessions, etc.) using Vim-like key
+					bindings; thus, without using the mouse at all.
 				</p>
 
 				<p class="notice">
 					Note: the project is a <i>work in progress</i>, no stable releases has
 					been published yet but as far as I can tell the extension seems enough
-					stable to be used by everyone. <a href="#">Try it out</a>.
+					stable to be used by everyone. <a href="#" onclick="alert('To be packaged...');">Try it out</a>.
 					<br>
-					If you're a developer <a href="#">download</a> or <a href="#">browse</a>
-					the sources in order to start using and (hopefully) contributing to
-					Vimiax. It's needed lots of testing and at least a stub of user guide;
-					that's mainly why it's not so easy for non-developers to try out which
-					keycombo do what thing and it's not so easy for a developer to find the
-					time to write a bit of documentation. So, if you are not a developer but
-					you think to be able to understand how Vimiax works or how to use it,
-					feel free to write something about and <a href="#">email me</a>. You can
-					of course add credits to yourself if you wants.
+					If you're a developer <a href="http://github.com/clamiax/vimiax/archives/master">download</a>
+					or <a href="http://github.com/clamiax/vimiax">browse</a> the sources in
+					order to start using and (hopefully) contributing to Vimiax. It's needed
+					lots of testing and at least a stub of user guide; that's mainly why it's
+					not so easy for non-developers to try out which keycombo do what thing and
+					it's not so easy for a developer to find the time to write a bit of
+					documentation. So, if you are not a developer but you think to be able to
+					understand how Vimiax works or how to use it, feel free to write something
+					about and <a href="http://github.com/clamiax">contacts me</a>. You can of
+					course add credits to yourself if you wants.
 				</p>
 
 				<p>
@@ -116,9 +118,9 @@
 
 			<div id="footer">
 				<p class="links">
-					<a href="#">Project page</a>
-					⋅ <a href="#">Wiki</a>
-					⋅ <a href="#">Sources</a>
+					<a href="http://github.com/clamiax/vimiax">Project page</a>
+					⋅ <a href="#" onclick="alert('To be implemented...');">Wiki</a>
+					⋅ <a href="http://github.com/clamiax/vimiax">Sources</a>
 				</p>
 				<p class="credits">© 2010 <a href="http://clamiax.github.com">Claudio M. Alessi</a></p>
 			</div>
