Links the wiki.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<div id="footer">
 				<p class="links">
 					<a href="http://github.com/clamiax/vimiax">Project page</a>
-					⋅ <a href="#" onclick="alert('To be implemented...');">Wiki</a>
+					⋅ <a href="http://github.com/clamiax/vimiax/wiki">Wiki</a>
 					⋅ <a href="http://github.com/clamiax/vimiax">Sources</a>
 				</p>
 				<p class="credits">© 2010 <a href="http://clamiax.github.com">Claudio M. Alessi</a></p>
